--- a/style.css
+++ b/style.css
@@ -1,118 +1,290 @@
-*{
-    margin:0 ;
-    padding:0 ;
-    box-sizing: border-box;
-    font-family: sans-serif;
-}
-
-html,body{
-    width:100% ;
-    height: 100%;
-}
-#main{
-    width: 100%;
-    height:100% ;
+/*Google Fonts */
  
-    display: flex;
-}
-#left{
-    width: 40%;
-    height: 100%;
-     position: relative;
-     /* center */
-}
-#lnav{
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-    padding: 20px 30px;
-}
-#lnavr a{
-    margin-right: 20px;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+ *{margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    scroll-behavior: smooth;
+    scroll-padding-top:2rem ;
+    list-style: none;
     text-decoration: none;
-    color: #000;
+    font-family: 'Poppins', sans-serif;}
+:root{
+    --text-color:#000000;
+    --main-color:#83b735;
+}
+section{
+    padding: 50px 10%;
+}
+header{
+    position: fixed;
+    width: 100%;
+    top: 0;
+    right: 0;
+    z-index: 1000;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 18px 100px;
+    background:#edecea;
+}
+.logo{
+    font-size: 1.2rem;
+    font-weight: 600;
+    color: var(--text-color);
+}
+.logo span{
+    color: var(--main-color);
+}
+.navbar{
+    position: relative;
+    display: flex;
+}
+.navbar a{
+    font-size: 1rem;
+    padding: 10px 20px;
+    font-weight: 500;
+    color: var(--text-color);
+}
+.navbar a:hover{
+    color: var(--main-color);
+}
+#menu-icon{
+    font-size: 2rem;
+    cursor: pointer;
+    display: none;
+}
+.home{
+    width: 100%;
+    min-height: 100vh;
+    background-image: url(images/img/background.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: right;
+    background-attachment: fixed;
+    display: flex;
+    align-items: center;
+}
+.home-text h1{
+    font-size: 2.7rem;
+}
+.home-text p{
+    font-size: 0.938rem;
+    margin: 0.4rem 0 1.8rem;
+}
+.home-text span{
+    color: var(--main-color);
+}
+.btn{
+    padding: 10px 14px;
+    background-color: var(--main-color);
+    color: #fff;
+    border-radius: 0.3rem;
+    font-size: 14px;
+}
+.btn:hover{
+    background: #8fc53d;
+}
+.heading{
+    text-align: center;
+}
+.heading span{
     font-size: 14px;
     font-weight: 500;
+    color: var(--main-color);
+    text-transform: uppercase;
 }
-
-#lnavr i{
-    color: royalblue;
+.shop-container{
+    display: grid;
+    grid-template-columns: repeat(auto-fit,minmax(300px,auto));
+    gap: 1rem;
+    margin-top: 2rem;
 }
-
-/*how can a sentence in center */
-#left #textcenter{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
+.box{
+    position: relative;
+    box-shadow: 1px 4px 4px rgb(0,0,0,0.1);
+    border-radius: 44px 4px 4px 4px;
 }
-#textcenter h1{
-    font-size: 90px;
-    font-weight: 900;
-}
-#textcenter p{
-    opacity: 6;
-    font-size: 12px;
-    line-height: 20px;
-    margin-top: 20px;
-    margin-bottom: 20px;
-}
-#textcenter a{
-    text-decoration: none;
-    color: #000;
-    border-bottom: 1px solid #000;
-    padding-bottom: 5px;
-    font-size: 13px;
-    font-weight: 600;
-    opacity: 0.6;
-}
-
-/*twiteer acount up side so balence */ 
-#lnavr{
-display: flex;
-align-items: center;
-}
-
-#right{
-    width:60% ;
-    height:100% ;
-    background-color: white;
-}
-#rtop{
+.box .box-img{
     width: 100%;
-    height: 50%;
+    height: 400px;
+    overflow: hidden;
+    border-radius: 44px 4px 0 0;
+}
+.box .box-img img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+}
+
+.box .box-img img:hover{
+transform: scale(1.1);
+transition: 0.5s;
+}
+
+.title-price{
     display: flex;
-    background-color: royalblue;
+    justify-content: space-between;
+    padding: 12px;
 }
-#rbottom{
-    width: 100%;
-    height: 50%;
-    background-color: rgb(242,178,59);
+.title-price h3{
+    font-size: 1rem;
+    font-weight: 600;
 }
-#rtopleft{
-    width: 55%;
-    height: 100%;
-   background-image: url(https://unsplash.com/photos/orange-fruit-U1iYwZ8Dx7k);
+.box span{
+    font-size: 1.1rem;
+    font-weight: 500;
+    padding-left: 12px;
+    color: var(--main-color);
+}
 
-background-size: cover;
-background-position: center;
+.stars .bx{
+    color: var(--main-color);
 }
-#rtopright{
-    width: 45%;
-    height: 100%;
-    background-image: url(https://unsplash.com/photos/sliced-orange-fruit-on-blue-surface-8ZGgg6rhzxs);
+
+.box .bx-cart{
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    padding: 7px;
+    font-size: 20px;
+    color: #fff;
+    border-radius: 4px 0 4px 0;
+    background: var(--main-color);
+}
+.box .bx-cart:hover{
+    background: #8fc53d;
+}
+.new-container{
+    display: grid;
+    grid-template-columns: repeat(auto-fit,minmax(300px,auto));
+    gap: 1rem;
+    margin-top: 2rem;
+}
+.new-container .box{
+    border-radius: 4px;
+}
+.new-container .box .box-img{
+    border-radius: 4px;
+}
+
+.about {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 1rem;
+  }
+  .about-img  {
+    width: 70%;
+    border-radius: 10px;
+    object-fit: contain;
+  }
+  .about-text span {
+    font-size: 14px;
+    font-weight: 500;
+    text-transform: uppercase;
+    color: var(--main-color);
+  }
+  .about-text p {
+    font-size: 0.938rem;
+    margin: 0.5rem 0 1.4rem;
+  }
+   .brands-container{
+    display: grid;
+    grid-template-columns: repeat(auto-fit,minmax(100px,auto));
+    justify-content: space-between;
+    gap: 1rem;
+    margin-top: 2rem;
+   }
+   .brands-container img{
+    width: 100px;
+    filter: grayscale(1);
+   }
+   .brands-container img:hover{
+    width: 100px;
+    filter: grayscale(0);
+   }
+
+   .newsletter{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-image: url(/images/img/bg.jpg);
+    background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-}
+   }
+   .newsletter h2{
+    color: #fff;
+   }
+   .news-box{
+    display: flex;
+    align-items: center;
+    margin-top: 2rem;
+   }
+   .news-box input{
+    width: 260px;
+    height: 44px;
+    border: none;
+    background: #fff;
+    padding: 10px;
+   }
 
-@media(max-width:500px){
-    #main{
-        flex-direction: column;
-    }
-    #main #left{
-        width: 100%;
-    }
-    #main #right{
-        width: 100%;
-    }
+   .news-box .btn{
+    height: 44px;
+    padding: 11px;
+    border-radius: 0;
+    font-weight: 500;
+    text-transform: uppercase;
+   }
+.footer{
+    display: grid;
+    grid-template-columns: repeat(auto-fit,minmax(240px,auto));
+    gap: 1rem;
 }
+   .footer-box h2{
+    font-size: 1.2rem;
+    font-weight: 600;
+    margin-bottom: 10px;
+   }
+   .footer-box span{
+    color: var(--main-color);
+   }
+   .footer-box p{
+    font-size: .938rem;
+    margin-bottom: 10px;
+  
+   }
+   .social{
+    display: flex;
+    align-items: center;
+   }
+   .social a{
+    font-size: 24px;
+    margin-right: 10px;
+    color: var(--text-color);
+   }
+   .social a:hover{
+    color: var(--main-color);
+   }
+   .footer-box h3{
+    font-weight: 500;
+    margin-bottom: 10px;
+   }
+   .footer-box li a{
+    color: var(--text-color);
+   }
+   .footer-box li a:hover{
+    color: var(--main-color);
+   }
+   .contact-info{
+    display: flex;
+    flex-direction: column;
+   }
+   .contact-info span{
+    color: var(--text-color);
+   }
+   .copyright{
+    padding: 20px;
+    text-align: center;
+   }
